# remote-file-system

./: .gitignore  README.md
client/: Cargo.toml  package-lock.json  package.json
client/crates/rfs-api/: Cargo.toml
client/crates/rfs-api/src/: lib.rs  stub.rs
client/crates/rfs-cache/: Cargo.toml
client/crates/rfs-cache/src/: lib.rs  old.rs
client/crates/rfs-cliApp/: Cargo.toml
client/crates/rfs-cliApp/src/: main.rs
client/crates/rfs-fuse/: Cargo.toml
client/crates/rfs-fuse-macos/: Cargo.toml
client/crates/rfs-fuse-macos/src/: lib.rs
client/crates/rfs-fuse/src/: lib.rs
client/crates/rfs-models/: Cargo.toml
client/crates/rfs-models/src/: lib.rs
client/crates/rfs-winfsp/: Cargo.toml
client/crates/rfs-winfsp/src/: lib.rs
client/src/: lib.rs
server/: .gitignore  README.md  jest.config.ts  metadata.sqlite  package-lock.json  package.json  tests.http  tsconfig.json  vercel.json
server/src/: data-source.ts  index.ts  utilities.ts
server/src/controllers/: RWController.ts  attrController.ts  authenticationController.ts  fileController.ts  filesystemController.ts  utility.ts
server/src/entities/: File.ts  Group.ts  Path.ts  User.ts
server/src/routes/: authenticationRoutes.ts  filesystemRoutes.ts
server/src/types/: filesystemTypes.ts
server/test/: filesystem.e2e.test.ts
