[workspace]
resolver = "3"
members = [
  "crates/rfs-api",
  "crates/rfs-cache", #per ora disponibile solo su unix
  "crates/rfs-cliApp",
  "crates/rfs-models",
  "crates/rfs-fuse",     #solo unix
  "crates/rfs-winfsp"      #solo Windows
]

default-members = [
  "crates/rfs-api",
  "crates/rfs-cliApp",
  "crates/rfs-models",
]
