[workspace]
resolver = "3"
members = [
  "crates/rfs-api",
  "crates/rfs-cache", #per ora disponibile solo su unix
  "crates/rfs-cliApp",
  "crates/rfs-models",
  "crates/rfs-fuse",     #solo unix
  "crates/rfs-winfsp"      #solo Windows
]

default-members = [
  "crates/rfs-api",
  "crates/rfs-cliApp", 
  "crates/rfs-models",
]

# Platform-specific member groups per facilità di build
[workspace.metadata.cross-platform]
linux-only = ["rfs-cache", "rfs-fuse"] 
windows-only = ["rfs-winfsp"]
common = ["rfs-api", "rfs-cliApp", "rfs-models"]
