[package]
name = "rfs-api"
version = "0.1.0"
edition = "2024"

[dependencies]
rfs-models = { version = "0.1.0", path = "../rfs-models" }
reqwest = { version = "0.12.22", features = ["cookies", "json"] }
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
