[package]
name = "rfs-api"
version = "0.1.0"
edition = "2024"

[dependencies]
rfs-models = { version = "0.1.0", path = "../rfs-models" }
# Reqwest ottimizzato - solo features essenziali
reqwest = { version = "0.12.22", default-features = false, features = ["cookies", "json", "stream", "rustls-tls"] }
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
# Tokio ottimizzato - solo features necessarie  
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "time", "io-util"] }
tokio-stream = { version = "0.1.17", default-features = false }
bytes = "1.10.1"
rpassword = "7.4.0"
httpdate = "1.0.3"
tokio-util = { version = "0.7.16", default-features = false, features = ["codec"] }
