[package]
name = "rfs-cliApp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.41", features = ["derive"]}
rfs-api = { version = "0.1.0", path = "../rfs-api" }
rfs-models = { version = "0.1.0", path = "../rfs-models" }
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "signal"] }
signal-hook = "0.3.18"

[target.'cfg(unix)'.dependencies]
rfs-cache = { version = "0.1.0", path = "../rfs-cache" }
rfs-fuse = { version = "0.1.0", path = "../rfs-fuse" }
fuser = { version = "0.15.1" }
daemonize = { version = "0.5.0" }

[target.'cfg(target_os = "windows")'.dependencies]
rfs-winfsp = { version = "0.1.0", path = "../rfs-winfsp" }
winfsp = "0.11.3"