[package]
name = "rfs-cliApp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.41", features = ["derive"]}
rfs-api = { version = "0.1.0", path = "../rfs-api" }
tokio = {version="1.47.1",features=["rt-multi-thread"]}

[target.'cfg(unix)'.dependencies]
rfs-cache = { version = "0.1.0", path = "../rfs-cache" }
rfs-fuse = { version = "0.1.0", path = "../rfs-fuse" }
fuser = "0.16.0"
daemonize = "0.5.0" 
signal-hook = "0.3.18"

[target.'cfg(target_os = "windows")'.dependencies]
rfs-winfsp = { version = "0.1.0", path = "../rfs-winfsp" }
winfsp = "0.11.3"
ctrlc = "3.5.0"